objects/CopilotAnalyticsCalculator__dlm.object
<CustomObject>
    <fields>
        <fullName>BotId__c</fullName>
        <label>Bot ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByField1__c</fullName>
        <label>Group By Field 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByField2__c</fullName>
        <label>Group By Field 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByField3__c</fullName>
        <label>Group By Field 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByValue1__c</fullName>
        <label>Group By Value 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByValue2__c</fullName>
        <label>Group By Value 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupByValue3__c</fullName>
        <label>Group By Value 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_MetricId__c</fullName>
        <label>Key Qualifier Metric ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricId__c</fullName>
        <label>Metric ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricKey__c</fullName>
        <label>Metric Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricValue__c</fullName>
        <label>Metric Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
</CustomObject>